--- a/cargo.toml
+++ b/cargo.toml
@@ -13,6 +13,7 @@ tonic = "0.1"
 prost = "0.6"
 tokio = { version = "0.2", features = ["macros"] }
 async-trait = "0.1.24"
+diesel = { version = "1.0.0", features = ["postgres"] }
 
 [build-dependencies]
 tonic-build = "0.1.0"
